feat: add jwks endpoint
