# api/gateway/internal/handler/routes.go
@@ -1,0 +1,81 @@
+// Code generated by goctl. DO NOT EDIT.
+// goctl 1.8.4
+
+package handler
+
+import (
+	"net/http"
+
+	ai "github.com/geekeryy/api-hub/api/gateway/internal/handler/ai"
+	healthz "github.com/geekeryy/api-hub/api/gateway/internal/handler/healthz"
+	jwks "github.com/geekeryy/api-hub/api/gateway/internal/handler/jwks"
+	"github.com/geekeryy/api-hub/api/gateway/internal/svc"
+
+	"github.com/zeromicro/go-zero/rest"
+)
+
+func RegisterHandlers(server *rest.Server, serverCtx *svc.ServiceContext) {
+	server.AddRoutes(
+		[]rest.Route{
+			{
+				// 每日一句
+				Method:  http.MethodGet,
+				Path:    "/daily-sentence",
+				Handler: ai.DailySentenceHandler(serverCtx),
+			},
+		},
+		rest.WithJwt(serverCtx.Config.Auth.AccessSecret),
+		rest.WithPrefix("/api/v1/gateway/ai"),
+	)
+
+	server.AddRoutes(
+		[]rest.Route{
+			{
+				// 健康检查
+				Method:  http.MethodGet,
+				Path:    "/ping",
+				Handler: healthz.PingHandler(serverCtx),
+			},
+		},
+		rest.WithPrefix("/api/v1/gateway"),
+	)
+
+	server.AddRoutes(
+		[]rest.Route{
+			{
+				// 获取公钥
+				Method:  http.MethodGet,
+				Path:    "/get",
+				Handler: jwks.JWKSHandler(serverCtx),
+			},
+		},
+		rest.WithPrefix("/api/v1/gateway/jwks"),
+	)
+
+	server.AddRoutes(
+		rest.WithMiddlewares(
+			[]rest.Middleware{serverCtx.ContextMiddleware},
+			[]rest.Route{
+				{
+					// 删除公钥
+					Method:  http.MethodDelete,
+					Path:    "/delete",
+					Handler: jwks.DeleteKeyHandler(serverCtx),
+				},
+				{
+					// 轮换公钥
+					Method:  http.MethodPost,
+					Path:    "/rotate",
+					Handler: jwks.RotateKeyHandler(serverCtx),
+				},
+				{
+					// 公钥使用记录
+					Method:  http.MethodGet,
+					Path:    "/usage",
+					Handler: jwks.KeyUsageHandler(serverCtx),
+				},
+			}...,
+		),
+		rest.WithPrefix("/api/v1/gateway/jwks"),
+	)
+}
